--- a/css/skins/default.css
+++ b/css/skins/default.css
@@ -403,7 +403,7 @@ html .svg-stroke-color-hover-light svg:hover polygon {
 }
 html .bg-color-primary,
 html .bg-primary {
-  background-color: #08c !important;
+  background-color: #622340 !important;
 }
 html .bg-color-hover-primary:hover,
 html .bg-hover-primary:hover {
